# HypeVest

./: .gitignore  README.md  package-lock.json
contracts/bond_factory/: Cargo.toml  build.rs
contracts/bond_factory/src/: lib.rs
contracts/prediction_market/: Cargo.toml
contracts/prediction_market/src/: lib.rs
docs/: design.md  pitch.md
frontend/: .env.local  env.local.example  next.config.js  package-lock.json  package.json
frontend/.next/: build-manifest.json  trace
frontend/.next/server/: _error.js  middleware-build-manifest.js  pages-manifest.json
frontend/.next/server/pages/: _app.js  _error.js  index.js  (+5 more)
frontend/components/: BondCard.tsx  TradeWidget.tsx
frontend/components/Auth/: LoginModal.tsx
frontend/components/Bonds/: CreateBondModal.tsx
frontend/components/Context/: AuthContext.tsx
frontend/components/Dashboard/: ActiveUsersChart.tsx  BuyerDashboard.tsx  CreatorDashboard.tsx  CreatorProfileCard.tsx  OrdersCard.tsx  ProjectsCard.tsx  ReferralCard.tsx  RevenueChart.tsx  SatisfactionCard.tsx  StatsCard.tsx
frontend/components/Layout/: Header.tsx  Sidebar.tsx
frontend/components/lib/: lineraclient.tsx  youtubeApi.tsx
frontend/components/theme/: index.tsx
frontend/pages/: _app-backup.tsx  _app.tsx  basic.tsx  billing.tsx  index.tsx  profile-simple.tsx  profile.tsx  signin.tsx  signup.tsx  test.tsx  trading.tsx
frontend/pages/api/: buy.ts
frontend/public/: test.html
relayer/: .env  package-lock.json  package.json
relayer/src/: index.ts
scripts/: install-dependencies.bat  install-dependencies.sh  start-dev.bat  start-dev.sh
(+39 files in other folders)
