[package]
name = "bond_factory"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Use the latest REAL version, with a caret
linera-sdk = { version = "^0.15.4", features = ["with-build-script"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
thiserror = "1.0"

# Use the latest REAL version, WITH A CARET
linera-views = "^0.15.4"


[build-dependencies]
# Use the correct feature for this version, with a caret
linera-sdk = { version = "^0.15.4", features = ["with-build-script"] }

