# contracts/bond_factory/Cargo.toml
[package]
name = "prediction_market"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
linera-sdk = "0.15.3"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt"] }
